# discord-bot

./: .env  .gitattributes  .gitignore  README.md  admin.py  bot.py  f1.py  main.py  meme.py  music.py  on_startup.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  utility.py
.github/workflows/: tests.yml
cogs/: admin.py  f1.py  meme.py  music.py  on_startup.py  other.py  template.py  utility.py
docs/: CONTRIBUTING.md  CREDITS  README.md
src/: main.py
src/cogs/: admin.py  error_handler.py  fun.py  music.py  on_startup.py  other.py  removed_commands.py.example  template.py  template.py.example  utility.py
src/cogs/admin/: admin.py
src/cogs/fun/: f1.py  meme.py
src/core/: admin_check.py  ai.py  config.py  cowsay.py  f1.py  howmany.py  image_checker.py  youtube.py  youtube_downloader.py
tests/: test_admin_check.py  test_ai.py  test_cowsay.py  test_f1.py  test_howmany.py  test_image_checker.py  test_syntax.py  test_youtube.py
